--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -102,7 +102,6 @@
     .carousel .wish-icon .fa-heart {
       color: #ff6161;
     }
-
   </style>
   <script>
   </script>
@@ -112,22 +111,23 @@
   <!-- Header -->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
-        <div class="logo">
-            <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-        </div>
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-        <div class="input-group mb-3 w-50">
-            <input type="text" class="form-control input-search" placeholder="Buscar...">
-            <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-            </div>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
         </div>
+      </div>
 
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
           <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
           <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png" alt="Foto de perfil" width="30px"></a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
             <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
@@ -191,18 +191,19 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Acessibilidade <b>Produtos</b></h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+        <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
-                
+
             <div class="item carousel-item active">
               <div class="row">
                 <div class="col-sm-3">
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/play-station.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -215,7 +216,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/macbook-pro.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -228,7 +230,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -241,7 +244,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/galaxy.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -258,7 +262,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/iphone.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -271,7 +276,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/canon.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -284,7 +290,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/pixel.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -297,7 +304,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/watch.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -310,10 +318,10 @@
             </div>
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <a class="carousel-control-prev" href="#myCarousel1" data-slide="prev">
             <i class="bi bi-arrow-left-circle"></i>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <a class="carousel-control-next" href="#myCarousel1" data-slide="next">
             <i class="bi bi-arrow-right-circle"></i>
           </a>
         </div>
@@ -325,18 +333,19 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Melhores Preços</h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+        <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
-                
+
             <div class="item carousel-item active">
               <div class="row">
                 <div class="col-sm-3">
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/play-station.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -349,7 +358,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/macbook-pro.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -362,7 +372,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -375,7 +386,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/galaxy.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -392,7 +404,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/iphone.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -405,7 +418,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/canon.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -418,7 +432,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/pixel.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -431,7 +446,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/watch.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -444,10 +460,10 @@
             </div>
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <a class="carousel-control-prev" href="#myCarousel2" data-slide="prev">
             <i class="bi bi-arrow-left-circle"></i>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <a class="carousel-control-next" href="#myCarousel2" data-slide="next">
             <i class="bi bi-arrow-right-circle"></i>
           </a>
         </div>
@@ -461,8 +477,7 @@
       <div class="row g-0 mx-lg-0">
         <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
           <div class="position-relative h-100">
-            <img class="position-absolute img-fluid w-100 h-100"
-              src="../assets/imagem-vendedor-sapato.png"
+            <img class="position-absolute img-fluid w-100 h-100" src="../assets/imagem-vendedor-sapato.png"
               style="object-fit: cover;" alt="">
           </div>
         </div>
