--- a/pages/index.html
+++ b/pages/index.html
@@ -191,7 +191,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Acessibilidade <b>Produtos</b></h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+        <div id="myCarousel1" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
@@ -202,7 +202,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/play-station.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -215,7 +215,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/macbook-pro.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -228,7 +228,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -241,7 +241,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/galaxy.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -258,7 +258,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/iphone.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -271,7 +271,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/canon.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -284,7 +284,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/pixel.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -297,7 +297,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/watch.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -310,10 +310,10 @@
             </div>
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <a class="carousel-control-prev" href="#myCarousel1" data-slide="prev">
             <i class="bi bi-arrow-left-circle"></i>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <a class="carousel-control-next" href="#myCarousel1" data-slide="next">
             <i class="bi bi-arrow-right-circle"></i>
           </a>
         </div>
@@ -325,7 +325,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Melhores Preços</h2>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+        <div id="myCarousel2" class="carousel slide" data-ride="carousel" data-interval="0">
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
@@ -336,7 +336,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/play-station.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -349,7 +349,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/macbook-pro.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -362,7 +362,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -375,7 +375,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/galaxy.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -392,7 +392,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/iphone.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -405,7 +405,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/canon.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -418,7 +418,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/pixel.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -431,7 +431,7 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <img src="/examples/images/products/watch.jpg" class="img-fluid" alt="Foto Sapato">
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -444,10 +444,10 @@
             </div>
           </div>
           <!-- Carousel controls -->
-          <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+          <a class="carousel-control-prev" href="#myCarousel2" data-slide="prev">
             <i class="bi bi-arrow-left-circle"></i>
           </a>
-          <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+          <a class="carousel-control-next" href="#myCarousel2" data-slide="next">
             <i class="bi bi-arrow-right-circle"></i>
           </a>
         </div>
