--- a/pages/perfil-anunciante-public.html
+++ b/pages/perfil-anunciante-public.html
@@ -1,23 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Anunciante Public</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/arthur.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Perfil do anunciante</title>
+  <style>
+    body {
+      background: #e2eaef;
+      font-family: "Open Sans", sans-serif;
+    }
+  </style>
 </head>
+
 <body>
-    <h1 title="Perfil Anunciante Public">Perfil Anunciante Public</h1><hr>
-    <a href="home-public.html">Home Public</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="login.html">Login</a><br>
-    <a href="meu-carrinho-public.html">Meu Carrinho Public</a><hr>
+  <!-- Header -->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <a href="chat-compras.html">Mande uma mensagem compra</a><br>
-    <a href="chat-doacao.html">Mande uma mensagem doação</a><br><br>
-    <a href="produto-anuncio-public+.html">Produto Anuncio Public</a><br>
-    <a href="produto-doador-public+.html">Produto Doador Public</a>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
 
-</body>
-</html>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="container">
+
+    <h2 class="text-center pt-3 pb-2">Dados do Anunciante</h2>
+
+    <div class="w-100 row text-center align-items-center p-4">
+      <div class="col-md-4">
+        <img src="../assets/foto-perfil-exemplo.png" alt="foto-perfil-exemplo" width="100px" class="rounded mx-auto">
+        <h4>Nome do anunciante/doador</h4>
+        <img src="../assets/5-estrelas.png" alt="foto-perfil-exemplo" width="150px" class="rounded mx-auto">
+        <p>(Avaliações)</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Contato<br>
+          <p>(61) 99856-3298</p>
+        </h5>
+        <div>
+          <h5>Localização</h5>
+          <a href="https://goo.gl/maps/NVw3x2j2TVCRTSuw9" style="color: #0000ee"><img src="../assets/icone-gps.png"
+              alt="foto-perfil-exemplo" width="50px" class="rounded mx-auto">Localização do anunciante</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="col-md-8 border border-dark justify-content-center">
+          <a href="chat-anuncios.html" style="color: black"><img src="../assets/chat-redondo-icone.png"
+              alt="foto-perfil-exemplo" width="50px" class="rounded mx-auto">Mande uma mensagem</a>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="text-center">Anúncios/Doações</h2>
+
+    <div class="w-100 row text-center align-items-center p-4">
+        <div class="col-md-4">
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Tênis Verde</h4>
+              <p class="item-price"><strike>R$ 99,90</strike> <span>R$ 69,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Preto</h4>
+              <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-anuncio-public+.html"><img src="../assets/salto-3.png" class="rounded mx-auto" alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Vermelho</h4>
+              <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="w-100 p-4">
+      <div>
+        <h4>Comentários e Avaliações</h4>
+        <div class="d-flex flex-start col-6">
+          <img class="rounded-circle shadow-1-strong me-3"
+            src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(23).webp" alt="avatar" width="60" height="60" />
+          <div>
+            <h6 class="fw-bold mb-1">Maggie Marsh</h6>
+            <div class="d-flex align-items-center mb-3">
+              <p class="mb-0">
+                March 07, 2021
+              </p>
+            </div>
+            <p class="mb-0">
+              Produtos muito bons! Recomendo!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
