--- a/pages/produto-doador-public+.html
+++ b/pages/produto-doador-public+.html
@@ -55,7 +55,7 @@
     <div class="container">
         <div class="d-flex align-items-center w-100 text-center p-3">
             <h3>Nome Doador</h3>
-            <a href="busca-filtragem-public.html" class="btn btn-info m-3">Visitar perfil</a>
+            <a href="perfil-anunciante-public.html" class="btn btn-info m-3">Visitar perfil</a>
         </div>
         <div class="d-flex justify-content-center">
             <div class="w-50 border p-2">
@@ -70,12 +70,12 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../assets/salto-1.png" class="d-block w-75 rounded mx-auto" alt="foto 1">
+                            <img src="../assets/salto-2.png" class="d-block w-75 rounded mx-auto" alt="foto 1">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="../assets/salto-2.png" class="d-block w-75 rounded mx-auto" alt="foto 2">
+                            <img src="../assets/salto-1.png" class="d-block w-75 rounded mx-auto" alt="foto 2">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
